# coral-repo

./: .gitignore  README.md
coral/: buildEnv.dist.py  buildStandalone.py  coralBuilder.py
coral-cmake/: CMakeLists.txt  buildMayaPlugin.py  buildStandalone.py
coral-cmake/coral/: CMakeLists.txt  SConstruct
coral-cmake/coral/builtinNodes/: ArithmeticNodes.cpp  ArithmeticNodes.h  BoolNode.h  ConditionalNodes.cpp  ConditionalNodes.h  LoopNodes.cpp  LoopNodes.h  MathNodes.cpp  MathNodes.h  NumericNodes.cpp  NumericNodes.h  NumericOperation.cpp  NumericOperation.h  SplineNodes.cpp  SplineNodes.h  numericOperationAlgos.h
coral-cmake/coral/py/: coralStandaloneConfig.py  launchApp.py
coral-cmake/coral/py/coral/: __init__.py  builtinCommands.py  builtinNodes.py  collapsedNode.py  collapser.py
coral-cmake/coral/pythonWrappers/: attributeWrapper.h  coralIOWrapper.h  errorObjectWrapper.h  geoWrapper.h  loopNodesWrapper.h  mathNodesWrapper.h  networkManagerWrapper.h  numericNodesWrapper.h
coral-cmake/coral/src/: Attribute.cpp  Attribute.h  ErrorObject.cpp  NetworkManager.cpp  NetworkManager.h  Node.cpp  NodeAccessor.h  Numeric.cpp  Numeric.h  NumericAttribute.cpp  NumericAttribute.h  PassThroughAttribute.cpp  PassThroughAttribute.h  StringAttribute.cpp  StringAttribute.h  Value.cpp  Value.h  containerUtils.h  coreParallelAlgos.h  pythonWrapperUtils.cpp  pythonWrapperUtils.h  stringUtils.cpp  stringUtils.h
coral-cmake/coral/tests/: coralTests.h
coral-cmake/coralMaya/: SConstruct
coral-cmake/coralUi/: SConstruct
coral-cmake/imath/: SConstruct
(+64 files in other folders)
