cmake_minimum_required (VERSION 3.7)

file(GLOB SOURCES "src/*.cpp" "src/*.h")
file(GLOB NODES "builtinNodes/*.cpp" "builtinNodes/*.h")
add_library (coral SHARED ${SOURCES} ${NODES})
add_definitions(-DCORAL_COMPILE)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} ${NODES})
target_include_directories(coral PRIVATE "D:/SDK/boost_1_71_0/boost_1_71_0/" )
target_include_directories(coral PRIVATE "D:/Workspaces/Aurora/Thirdparty/freeimage/Source/OpenEXR/Imath/" )
target_include_directories(coral PRIVATE "D:/Workspaces/Aurora/Thirdparty/freeimage/Source/OpenEXR/Iex/" )
target_include_directories(coral PRIVATE "D:/Workspaces/Aurora/Thirdparty/freeimage/Source/OpenEXR/Half" )
target_include_directories(coral PRIVATE "D:/Workspaces/Aurora/Thirdparty/freeimage/Source/OpenEXR/" )
target_include_directories(coral PRIVATE "D:/Workspaces/coral-repo/oiio/src/include" )
target_include_directories(coral PRIVATE "D:/Workspaces/coral-repo/coral-cmake/imath/ImathPythonWrapper/" )
target_compile_definitions(coral PRIVATE )